# docs/swagger.json
@@ -54,6 +54,38 @@
                 "responses": {}
             }
         },
+        "/images/getBaseData/": {
+            "get": {
+                "description": "get architecture, release Version, output Format ,and default package name list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meta Manager"
+                ],
+                "summary": "GetBaseData",
+                "responses": {}
+            }
+        },
+        "/images/getCustomePkgList/": {
+            "get": {
+                "description": "get default package name list. this list load from https://raw.githubusercontent.com/omnibuildplatform/omni-imager/main/etc/openEuler-minimal.json",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meta Manager"
+                ],
+                "summary": "GetCustomePkgList",
+                "responses": {}
+            }
+        },
         "/images/insert": {
             "post": {
                 "description": "insert single data",
