# routers/router.go
@@ -24,6 +24,8 @@ func InitRouter() *gin.Engine {
 		v1.GET("/images/get/:id", controllers.Read)
 		v1.GET("/images/query", controllers.Query)
 		v1.DELETE("/images/delete/:id", controllers.Delete)
+		v1.GET("/images/getBaseData/", controllers.GetBaseData)
+		v1.GET("/images/getCustomePkgList/", controllers.GetCustomePkgList)
 	}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	return r
